--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,11 @@
 
   grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 10fr;
+  height: inherit;
+}
+
+.app-wrapper-content {
+  grid-area: c;
+  background-color: cornflowerblue;
+  margin: 20px;
 }
