--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,8 +1,15 @@
 .nav {
     grid-area: n;
     background-color: burlywood;
+    margin: 20px;
+    padding: 20px;
 }
 
-.post {
+.item a {
     color: white;
+    text-decoration: none;
+}
+
+.item a.active {
+    color: gold;
 }
